Update to Version skmulitflow version - 0.5.dev0

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .vscode/*
 .idea/*
 .spyproject
+RRSLVQ.code-workspace
+__pycache__/kswin.cpython-37.pyc
+__pycache__/ReoccuringDriftStream.cpython-37.pyc
